test/src/e2e_vm_tests/test_programs/should_fail/recover_unclosed_multiline_comment/src/main.sw
contract;

dep foo;
dep bar;
dep baz;

fn a() -> bool { 0 } // recovery witness

/*
/*
*/
